# blep1-firmware

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE.md  README.md  prj.conf  west.yml
.github/workflows/: main.yml
boards/: native_posix_64.conf  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.defconfig  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
docs/: bugs_found.md  modbus_registers.md
firmware/: CMakeLists.txt  posix_net_setup.sh  prj.conf
firmware/boards/: native_posix_64.conf  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
firmware/src/: framer_task.c  handler_task.c  input.c  input.h  line_log.c  line_log.h  link_monitor.c  main.c  modbus.c  parser_task.c  parser_task.h  state_indicator.c  state_indicator.h  tcp.c  tcp.h  tcp_log.c  tcp_log.h  thread_mgmt.c  thread_mgmt.h  uart_p1.c  uart_p1.h  udp.c  watchdog.c  watchdog.h
firmware/tests/: CMakeLists.txt  prj.conf  testcase.yaml
firmware/tests/src/: test_openp1.c  test_parser.c  test_parsing.c
src/: ble.c  ble.h  blep1.h  common.c  framer_task.c  framer_task.h  handler_task.c  handler_task.h  line_log.c  main.c  modbus.c  modbus.h  modbus_udp.c  modbus_udp.h  nus_log.c  nus_log.h  parser.c  parser.h  parser_task.c  parser_task.h  sim_fifo.c  tcp.c  tcp.h  tcp_log.c  uart_p1.c  uart_p1.h  udp.c  udp.h
src/lib/: ble_definitions.c  ble_definitions.h  blep1.c  blep1.h  common.c  openp1.h  parser.c  parser.h  telegram.c  telegram.h  telegram_framer.c  value_store.c  (+2 more)
tests/: CMakeLists.txt
(+13 files in other folders)
